--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ extra_scripts = pre:custom_build.py
 lib_deps = 
 	bblanchon/ArduinoJson@^7.1.0
 	wnatth3/WiFiManager@^2.0.16-rc.2
+	arduino-libraries/NTPClient@^3.2.1
 
 [env:uno]
 platform = atmelavr
@@ -30,4 +31,5 @@ monitor_speed = 115200
 monitor_port = COM5
 upload_port = COM5
 extra_scripts = pre:custom_build.py
-lib_deps = marcoschwartz/LiquidCrystal_I2C@^1.1.4
+lib_deps = 
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
