add esp32 python

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.1.0
 	wnatth3/WiFiManager@^2.0.16-rc.2
 	arduino-libraries/NTPClient@^3.2.1
+	tobozo/ESP32-targz@^1.2.2
 
 [env:uno]
 platform = atmelavr
